--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,6 @@
 appname = "LanBlog"
 httpport = 8088
-runmode = prod
+runmode = dev
 autorender = true
 copyrequestbody = true
 EnableDocs = true
@@ -11,4 +11,4 @@ mysqlpass = "cxx15755599659"
 mysqlurls = "127.0.0.1:3306"
 mysqldb   = "myblog"
 adminName = "sinksmell"
-adminPWD = "cxx15755599659#"
+adminPWD = "sinksmell"
